test/libyul/yulSyntaxTests/period_in_identifier_spaced_2.yul
{ let x .y }
// ----
// ParserError 1856: (8-9): Literal or identifier expected.
